# log-collector-lambda-extension

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-extension.sh
src/: main.rs
