[package]
name = "log_collector_lambda_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime_client = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parquet = "29.0"
enum-as-inner = "0.5.1"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
chrono = "0.4"
uuid = { version = "1.2", features = ["v4"] }

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
