[package]
name = "log_collector_lambda_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-extension = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["rt", "signal", "macros"] }
warp = { version = "0.3", default-features = false }
parquet = { version = "29.0", default-features = false, features = ["flate2"] }
enum-as-inner = "0.5.1"
aws-config = { version= "0.52.0", default-features = false, features = ["client-hyper", "rt-tokio", "native-tls"] }
aws-sdk-s3 = { version = "0.22.0", default-features = false, features = ["rt-tokio", "native-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1.2", features = ["v4"] }
env_logger = { version = "0.10", default-features = false }
log = "0.4"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
